alteração do java 11 para java 8

--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,14 @@
 		<version>2.3.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.api</groupId>
-	<artifactId>houseparty</artifactId>
+	<groupId>br.com.houseparty</groupId>
+	<artifactId>api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>houseparty</name>
-	<description>Api da house party</description>
+	<name>api</name>
+	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
